S3ObjectMetadata as record